<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="Personalización">
        <SwitchPreference
            android:icon="@drawable/ic_baseline_style_24"
            android:key="DarkTheme"
            android:summary="@string/pref_enable_dark_mode"
            android:title="@string/pref_enable_dark_mode_title" />

        <Preference
            android:icon="@drawable/ic_palette_black_24dp"
            android:key="SubjectsColors"
            android:summary="@string/pref_change_cubjects_colors"
            android:title="@string/pref_change_cubjects_colors_title" />

        <!--<SwitchPreference-->
        <!--android:icon="@drawable/ic_remove_black_24dp"-->
        <!--android:key="NavBarColor"-->
        <!--android:summary="Deshabilitar barra de navegación coloreada"-->
        <!--android:title="Barra de navegación sin color" />-->
    </PreferenceCategory>

    <PreferenceCategory android:title="Home page">

        <ListPreference
            android:icon="@drawable/ic_baseline_functions_24"
            android:key="HomePageExamLimit"
            android:entries="@array/home_page_exam_limit_titles"
            android:entryValues="@array/home_page_exam_limit_values"
            android:summary="Interval date from now that the exams within that date will appear"
            android:title="Summary exams date limit" />

    </PreferenceCategory>

    <!--<PreferenceCategory android:title="Notificaciones">-->

    <!--<SwitchPreference-->
    <!--android:defaultValue="true"-->
    <!--android:icon="@drawable/ic_notifications_black_24dp"-->
    <!--android:key="NotificationsEnabled"-->
    <!--android:title="Activar notificaciones" />-->

    <!--<ListPreference-->
    <!--android:dependency="NotificationsEnabled"-->
    <!--android:icon="@drawable/ic_access_time_black_24dp"-->
    <!--android:key="NotificationsInterval"-->
    <!--android:summary="Cambiar qué tan frecuentemente la app busca notificaciones"-->
    <!--android:title="Intervalo de búsqueda de notificaciones" />-->

    <!--</PreferenceCategory>-->

    <PreferenceCategory android:title="General">

        <ListPreference
            android:defaultValue="es"
            android:entries="@array/language_list_titles"
            android:entryValues="@array/language_list_values"
            android:icon="@drawable/ic_language_black_24dp"
            android:key="LocaleApp"
            android:title="@string/pref_language_title" />
        <!--<Preference-->
        <!--android:icon="@drawable/ic_delete_black_24dp"-->
        <!--android:key="DeleteAppData"-->
        <!--android:summary="Borra todos los datos almacenados en la app. Requiere reinicio"-->
        <!--android:title="Borrar datos almacenados" />-->


    </PreferenceCategory>

    <PreferenceCategory android:title="Acerca de">

        <Preference
            android:icon="@drawable/ic_info_outline_black_24dp"
            android:summary="@string/pref_version_summary"
            android:title="@string/pref_version_title" />

        <Preference
            android:icon="@drawable/ic_star"
            android:title="@string/pref_rate_app_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://play.google.com/store/apps/details?id=com.victorbg.racofib" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_favorite_border_multicolor"
            android:title="@string/pref_help_development_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/VictorBG/RacoFib" />
        </Preference>

        <Preference
            android:icon="@drawable/ic_github"
            android:key="OpenSource"
            android:title="@string/pref_open_source_licenses_title">

        </Preference>


    </PreferenceCategory>


</PreferenceScreen>