<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rect_border_dark"
    android:transitionName="@string/transition_note_to_detail_name">

    <androidx.core.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="100dp"
      app:layout_behavior="@string/appbar_scrolling_view_behavior"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingBottom="16dp">


        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:baselineAligned="false"
          android:orientation="horizontal"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="@string/grade_percent_dialog_Edit"
            app:helperText="Valor entre 0-100"
            app:helperTextEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionNext"
              android:inputType="numberDecimal"
              android:text="@={grade.percent}"
              android:textColor="?themePrimaryTextColor" />
          </com.google.android.material.textfield.TextInputLayout>

          <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:hint="@string/grade_grade_dialog_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:imeOptions="actionDone"
              android:inputType="numberDecimal"
              android:text="@={grade.grade}"
              android:textColor="?themePrimaryTextColor" />
          </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
          android:id="@+id/textInputLayout"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="16dp"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:hint="@string/grade_name_dialog_edit"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent">

          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:text="@={grade.title}"
            android:textColor="?themePrimaryTextColor" />
        </com.google.android.material.textfield.TextInputLayout>


      </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/save"
      style="@style/Widget.MaterialComponents.Button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/save"
      android:textColor="@color/md_white_1000"
      app:backgroundTint="@color/accent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/close"
      style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:text="@string/close"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/save" />

    <com.google.android.material.button.MaterialButton
      android:id="@+id/delete"
      style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="8dp"
      android:text="@string/delete"
      android:visibility="@{newGrade? View.GONE: View.VISIBLE}"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <data>

    <import type="androidx.databinding.ObservableField" />

    <import type="com.victorbg.racofib.data.model.subject.Grade" />

    <import type="android.view.View" />

    <variable
      name="grade"
      type="ObservableField&lt;Grade&gt;" />

    <variable
      name="newGrade"
      type="Boolean" />
  </data>


</layout>