<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/exams_title"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Tab"
        android:textColor="?themeSecondaryTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/seeMoreExams"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/seeMoreExams" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewExams"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:minHeight="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/noExams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_incoming_exams"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Chip"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewExams"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewExams"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewExams"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewExams" />

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewExams"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewExams"
        app:layout_constraintStart_toStartOf="@+id/recyclerViewExams"
        app:layout_constraintTop_toTopOf="@+id/recyclerViewExams" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/seeMoreExams"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/see_all"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>