<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.Html" />

        <variable
            name="exam"
            type="com.victorbg.racofib.data.model.exams.Exam" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rect_border_dark"
        android:transitionName="@string/transition_note_to_detail_name">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:onClick="close"
            android:src="@drawable/ic_close_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView27"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@{exam.subject}"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="SUBJECT" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@string/middle_dot"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView27"
            app:layout_constraintTop_toTopOf="@+id/textView27" />

        <TextView
            android:id="@+id/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/work_sans_medium"
            android:text="@{exam.getType(context)}"
            android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            app:layout_constraintBottom_toBottomOf="@+id/textView27"
            app:layout_constraintStart_toEndOf="@+id/textView24"
            app:layout_constraintTop_toTopOf="@+id/textView27"
            tools:text="TYPE" />


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toBottomOf="@+id/imageButton">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="16dp"
                    android:drawableStart="@drawable/ic_access_time_black_24dp"
                    android:drawablePadding="@dimen/bottom_sheet_corner_radius"
                    android:gravity="center_vertical"
                    android:text="@{exam.getExamTimeInterval()}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Time" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:autoLink="all"
                    android:drawableStart="@drawable/ic_my_location_black_24dp"
                    android:drawablePadding="@dimen/bottom_sheet_corner_radius"
                    android:gravity="center_vertical"
                    android:linksClickable="true"
                    android:text="@{exam.classrooms}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    android:textIsSelectable="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    tools:text="Lorem ipsum dolor sit amet" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logout"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="saveToCalendar"
                    android:text="@string/save_to_calendar"
                    app:layout_constraintStart_toStartOf="@+id/description"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    app:strokeColor="@color/md_dark_dividers" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>